--- a/module/Album/view/album/album/edit2.phtml
+++ b/module/Album/view/album/album/edit2.phtml
@@ -8,22 +8,23 @@
 
  <?php
  $form = $this->form;
- $form->setAttribute('action', $this->url(
-     'album',
-     array(
-         'action' => 'edit2',
-         'id'     => $this->id,
-     )
- ));
+ // $form->setAttribute('action', $this->url(
+ //     'album',
+ //     array(
+ //         'action' => 'edit2',
+ //         'id'     => $this->id,
+ //     )
+ // ));
+ $form->setAttribute('id','editStudentForm');
  $form->prepare();
 
  echo $this->form()->openTag($form);
  echo $this->formHidden($form->get('id'));
+ echo $this->formHidden($form->get('pid'));
+ echo $this->formHidden($form->get('classs'));
+
  echo $this->formRow($form->get('name'));
-?>
-<br>
-<?php
- echo $this->formRow($form->get('classs'));
+
 ?>
 <br>
 <?php
@@ -31,5 +32,8 @@
 ?>
 <br>
 <?php
- echo $this->formSubmit($form->get('submit'));
+?>
+<button type="button" id="editStudentFormBtn" class="btn btn-info btn-sm" >Edit </button><?php
+
+ // echo $this->formSubmit($form->get('submit'));
  echo $this->form()->closeTag();
