--- a/module/Album/view/album/album/add.phtml
+++ b/module/Album/view/album/album/add.phtml
@@ -1,5 +1,5 @@
-	
- <?php
+
+<?php
  // module/Album/view/album/album/add.phtml:
 
  $title = 'Add new Class';
@@ -7,11 +7,16 @@
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
  <?php
- $form->setAttribute('action', $this->url('album', array('action' => 'add')));
+ //$form->setAttribute('action', $this->url('album', array('action' => 'add')));
+ $form->setAttribute('id','form');
  $form->prepare();
 
  echo $this->form()->openTag($form);
  echo $this->formHidden($form->get('id'));
  echo $this->formRow($form->get('name'));
- echo $this->formSubmit($form->get('submit'));
+ //echo $this->formSubmit($form->get('submit'));
+ ?>
+<button type="button" id="addClassFormBtn" class="btn btn-info btn-sm" >Add </button><?php
+
  echo $this->form()->closeTag();
+    ?>
