--- a/module/Album/view/album/album/delete.phtml
+++ b/module/Album/view/album/album/delete.phtml
@@ -6,9 +6,9 @@
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
 
- <p>Are you sure that you want to delete
-     '<?php echo $this->escapeHtml($album->name); ?>'
- </p>
+ <!--<p>Are you sure that you want to delete
+   '<?php echo $this->escapeHtml($album->name); ?>'
+ </p>-->
  <?php
  $url = $this->url('album', array(
      'action' => 'delete',
