--- a/module/Album/view/album/album/show.phtml
+++ b/module/Album/view/album/album/show.phtml
@@ -19,13 +19,18 @@
 
 
  </table>
+ <nav aria-label="...">
+   <ul class="paginationStudent">
 
+   </ul>
+ </nav>
 
 <script>
 $(function(){
 
 var variableId =<?php echo $id; ?>;
 console.log(variableId);
+myFunction2(1);
 
 
 $("body").on("click","#editStudentFormBtn",function(e){
@@ -215,23 +220,63 @@ console.log(name+email+id);
   //     });
   // });
 
+
+function myFunction2(studentPageValue){
+  // $(".studentTableContent").html('');
   $.ajax({
   url: '/gum/public/student-rest',
   // dataType: "jsonp",
   type: 'GET',
   success: function (data) {
-    console.log('success');
+    console.log(data);
    data=JSON.stringify(data);
-
    var obj=JSON.parse(data);
+
+  var totalStudentRecords=obj.data.length;
+  var totalStudentPages=Math.ceil(totalStudentRecords/5);
+  var first,last;
+
+  $(".paginationStudent").html('');
    $(".studentTableContent").html('');
-   for(var i=0; i<obj.data.length; i++){
+
+
+  for(var j = 1 ; j <= totalStudentPages ; j++){
+
+    $(".paginationStudent").append("<li class='page-item'><a class='page-link studentPageLink' value="+j+">"+j+"</a></li>")
+
+  }
+  if(studentPageValue==1){
+  first=0;
+  last=studentPageValue*5;
+  }
+  else if(studentPageValue==totalStudentPages){
+  first=(studentPageValue-1)*5;
+  last=totalStudentRecords;
+  }
+  else {
+  first=(studentPageValue-1)*5;
+  last=studentPageValue*5;
+  }
+  console.log('last:'+last);
+   for(var i=first; i<last; i++){
      if(obj.data[i].pid==variableId)
      $(".studentTableContent").append("<tr><td>"+ obj.data[i].name +"</td><td>"+ obj.data[i].email +"</td><td><button class='btn btn-info btn-sm editStudent' value="+obj.data[i].id+">Edit</button></td><td><button class='btn btn-info btn-sm btn-danger deleteStudent' value="+obj.data[i].id+">Delete</button></td></tr>");
 
    }
       console.log("Data:"+((obj.data.length)));
       console.log("grtstuList");
+
+      $(".studentPageLink").on('click',function(e){
+        e.preventDefault();
+
+        studentPageValue=$(this).attr('value');
+        console.log(studentPageValue);
+
+      myFunction2(studentPageValue);
+
+
+      });
+
 
       $(".editStudent").one("click",function(e){
       e.preventDefault();
@@ -252,9 +297,6 @@ console.log(name+email+id);
               success: function (data) {
                 console.log(JSON.stringify(data));
                 $("#myModal3").find(".modal-body").html(data.data);
-              //  alert((JSON.stringify(data)));
-              //  $("#myModal3").removeClass('in');
-              //  myFunction();
 
               },
               error: function (xhr, status, error) {
@@ -269,6 +311,78 @@ console.log(name+email+id);
       console.log('Error: ' + error.message);
   },
   });
+
+}
+//   $.ajax({
+//   url: '/gum/public/student-rest',
+//   // dataType: "jsonp",
+//   type: 'GET',
+//   success: function (data) {
+//     console.log(data);
+//    data=JSON.stringify(data);
+//    var obj=JSON.parse(data);
+//
+// var totalStudentRecords=obj.data.length;
+// var totalStudentPages=Math.ceil(totalStudentRecords/5);
+// var first=0,last;
+//
+// $(".paginationStudent").html('');
+//    $(".studentTableContent").html('');
+//
+//
+// for(var j = 1 ; j <= totalStudentPages ; j++){
+//
+//     $(".paginationStudent").append("<li class='page-item'><a class='page-link studentPageLink' value="+j+">"+j+"</a></li>")
+//
+// }
+// if(totalStudentRecords>=5){
+//   last=5
+// }
+// else {
+//   last=totalStudentRecords;
+// }
+// console.log('last:'+last);
+//    for(var i=0; i<last; i++){
+//      if(obj.data[i].pid==variableId)
+//      $(".studentTableContent").append("<tr><td>"+ obj.data[i].name +"</td><td>"+ obj.data[i].email +"</td><td><button class='btn btn-info btn-sm editStudent' value="+obj.data[i].id+">Edit</button></td><td><button class='btn btn-info btn-sm btn-danger deleteStudent' value="+obj.data[i].id+">Delete</button></td></tr>");
+//
+//    }
+//       console.log("Data:"+((obj.data.length)));
+//       console.log("grtstuList");
+//
+//       $(".editStudent").one("click",function(e){
+//       e.preventDefault();
+//       console.log("edit student");
+//       $('#myModal3').modal('show').find('.modal-body').load('/gum/public//edit2/'+$(this).attr('value'));
+//
+//
+//
+//       });
+//
+//       $(".deleteStudent").one("click",function(e){
+//         e.preventDefault();
+//         console.log("studentDelete");
+//         $.ajax({
+//               url: '/gum/public/student-rest/'+$(this).attr('value'),
+//               // dataType: "jsonp",
+//               type: 'DELETE',
+//               success: function (data) {
+//                 console.log(JSON.stringify(data));
+//                 $("#myModal3").find(".modal-body").html(data.data);
+//
+//               },
+//               error: function (xhr, status, error) {
+//                   console.log('Error: ' + error.message);
+//               },
+//           });
+//       });
+//
+//
+//   },
+//   error: function (xhr, status, error) {
+//       console.log('Error: ' + error.message);
+//   },
+//   });
 
 });
 
